# 6DOF

./: CMakeLists.txt  CMakePresets.json  main.cpp
Libraries/Controller/: Controller.cpp  Controller.h
Libraries/Inverse_Kinematics/: Inverse_Kinematics.cpp  Inverse_Kinematics.h
Libraries/PCA9685/: PCA9685.cpp  PCA9685.h
Libraries/Utilities/: Utilities.cpp  Utilities.h
Libraries/pca9685/: PCA9685.cpp  PCA9685.h
